[fix]: [PL-38723]: revert before commit 4cb7db0f77a4a9b79680b75efd913519ce1e85ff