@@ -81,7 +81,6 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
@@ -89,6 +88,7 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
+import org.mockito.stubbing.Answer;
 import retrofit2.Call;
 import retrofit2.Response;
 
@@ -197,7 +197,7 @@ public class InstanceSyncServiceImplTest extends InstancesTestBase {
             .infrastructureMapping(infrastructureMappingDTO)
             .deploymentInfoDTO(deploymentInfoDTO)
             .infrastructureMappingId(INFRASTRUCTURE_MAPPING_ID)
-            .serverInstanceInfoList(List.of(
+            .serverInstanceInfoList(Arrays.asList(
                 AzureSshWinrmServerInstanceInfo.builder().infrastructureKey(INFRASTRUCTURE_KEY).host(HOST3).build()))
             .build();
     doReturn(Optional.of(deploymentSummaryDTO))
@@ -268,17 +268,13 @@ public class InstanceSyncServiceImplTest extends InstancesTestBase {
       return instanceInfoDTO.prepareInstanceKey();
     });
 
-    doAnswer(invocation -> {
-      List<ServerInstanceInfo> instanceInfoList = invocation.getArgument(0, List.class);
-      return instanceInfoList.stream()
-          .map(instanceInfo -> {
-            AzureSshWinrmServerInstanceInfo s = (AzureSshWinrmServerInstanceInfo) instanceInfo;
-            return AzureSshWinrmInstanceInfoDTO.builder()
-                .host(s.getHost())
-                .infrastructureKey(s.getInfrastructureKey())
-                .build();
-          })
-          .collect(Collectors.toCollection(ArrayList::new));
+    doAnswer((Answer<InstanceInfoDTO>) invocation -> {
+      Object[] args = invocation.getArguments();
+      AzureSshWinrmServerInstanceInfo s = (AzureSshWinrmServerInstanceInfo) args[0];
+      return AzureSshWinrmInstanceInfoDTO.builder()
+          .host(s.getHost())
+          .infrastructureKey(s.getInfrastructureKey())
+          .build();
     })
         .when(abstractInstanceSyncHandler)
         .getInstanceDetailsFromServerInstances(deploymentSummaryDTO.getServerInstanceInfoList());
@@ -392,17 +388,13 @@ public class InstanceSyncServiceImplTest extends InstancesTestBase {
       return instanceInfoDTO.prepareInstanceKey();
     });
 
-    doAnswer(invocation -> {
-      List<ServerInstanceInfo> instanceInfoList = invocation.getArgument(0, List.class);
-      return instanceInfoList.stream()
-          .map(instanceInfo -> {
-            AzureSshWinrmServerInstanceInfo s = (AzureSshWinrmServerInstanceInfo) instanceInfo;
-            return AzureSshWinrmInstanceInfoDTO.builder()
-                .host(s.getHost())
-                .infrastructureKey(s.getInfrastructureKey())
-                .build();
-          })
-          .collect(Collectors.toCollection(ArrayList::new));
+    doAnswer((Answer<InstanceInfoDTO>) invocation -> {
+      Object[] args = invocation.getArguments();
+      AzureSshWinrmServerInstanceInfo s = (AzureSshWinrmServerInstanceInfo) args[0];
+      return AzureSshWinrmInstanceInfoDTO.builder()
+          .host(s.getHost())
+          .infrastructureKey(s.getInfrastructureKey())
+          .build();
     })
         .when(abstractInstanceSyncHandler)
         .getInstanceDetailsFromServerInstances(deploymentSummaryDTO.getServerInstanceInfoList());
